# www/html/api-laravel/routes/api.php
@@ -1,12 +1,14 @@
 <?php
 
-use App\Http\Controllers\ClienteController;
-use App\Http\Controllers\CepController;
+use App\Http\Controllers\Cep\GetCepController;
+use App\Http\Controllers\Cliente\GetClienteController;
+use App\Http\Controllers\Cliente\NewClienteController;
+use app\Http\Controllers\Cliente\UpdateClienteController;
 use Illuminate\Support\Facades\Route;
 
-Route::post('/clientes', [ClienteController::class, '__invoke']);
-Route::get('/clientes', [ClienteController::class, '__invoke']);
-Route::get('/clientes/{id}', [ClienteController::class, '__invoke']);
-Route::patch('/clientes/{id}', [ClienteController::class, '__invoke']);
+Route::post('/clientes', [NewClienteController::class, '__invoke']);
+Route::get('/clientes', [GetClienteController::class, '__invoke']);
+Route::get('/clientes/{id}', [GetClienteController::class, '__invoke']);
+Route::patch('/clientes/{id}', [UpdateClienteController::class, '__invoke']);
 
-Route::get('/cep/{cep}', [CepController::class, '__invoke']);
+Route::get('/cep/{cep}', [GetCepController::class, '__invoke']);
